<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background_color">


    <ScrollView
        android:id="@+id/formScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gray_border_bg_bottom_left_right">

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/first_name_customer" />

            <EditText
                android:id="@+id/first_nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="40"
                android:inputType="textCapSentences"
                android:layout_below="@id/first_name"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/first_name"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="40"
                android:inputType="textCapSentences"
                android:layout_toRightOf="@id/first_nameET"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/membership_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_nameET"
                android:textColor="@android:color/black"
                android:text="@string/membership_id_customer" />

            <EditText
                android:id="@+id/membership_idET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="40"
                android:layout_below="@id/membership_id"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_nameET"
                android:layout_toRightOf="@id/membership_id"
                android:textColor="@android:color/black"
                android:text="@string/email_id" />

            <EditText
                android:id="@+id/email_idET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/membership_idET"
                android:layout_below="@id/email_id"
                android:singleLine="true"
                android:maxLength="128"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/membership_idET"
                android:text="@string/mobile_no" />

            <EditText
                android:id="@+id/mobile_noET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="phone"
                android:layout_below="@id/mobile_no"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/nricPassport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_idET"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/mobile_no"
                android:text="@string/nric_passport" />

            <EditText
                android:id="@+id/nricPassportET"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:maxLength="20"
                android:layout_below="@id/nricPassport"
                android:singleLine="true"
                android:layout_toRightOf="@id/mobile_noET"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_noET"
                android:textColor="@android:color/black"
                android:text="@string/date_of_birth" />

            <EditText
                android:id="@+id/date_of_birthET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:inputType="none"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@id/date_of_birth"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nricPassportET"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/date_of_birth"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/gender"
                android:layout_toRightOf="@id/date_of_birth"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="30dp"
                    android:checked="true"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="30dp"
                    android:textColor="@android:color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/membership_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/date_of_birthET"
                android:text="@string/membership_validity" />

            <EditText
                android:id="@+id/membership_validityET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="2"
                android:layout_below="@id/membership_validity"
                android:background="@drawable/gray_border_bg" />

            <RadioGroup
                android:id="@+id/membership_validity_radio_group"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/membership_validity"
                android:layout_toRightOf="@id/membership_validityET"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/months_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/months"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="25dp"
                    android:checked="true"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/years_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/years"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="30dp"
                    android:textColor="@android:color/black" />
            </RadioGroup>


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender_radio_group"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/membership_validity"
                android:text="@string/address" />

            <EditText
                android:id="@+id/addressET"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/address"
                android:gravity="top"
                android:maxLines="3"
                android:layout_toRightOf="@id/membership_validity_radio_group"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/postal_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/addressET"
                android:text="@string/postal_code_not_mandatory" />

            <EditText
                android:id="@+id/postal_codeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="number"
                android:layout_below="@id/postal_code"
                android:background="@drawable/gray_border_bg" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressET"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/postal_code"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/countryET"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/country"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/postal_codeET"
                android:background="@drawable/gray_border_bg" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
